# Orkos-ToDo-Tool

./: .gitignore  README.md  __init__.py  setup.cfg  todo
src/: cli.py  cli_args.py  colors.py  config.py  display.py  main.py  storage.py
