[metadata]
name = orkos-todo-tool
version = 0.1.0
description = Simple terminal todo list with styled output
long_description = file: README.md
long_description_content_type = text/markdown
author = 
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >=3.7

[options.entry_points]
console_scripts =
    orkos-todo = orkos_todo_tool:main
    todo = orkos_todo_tool:main
